adding user id
