# api/swagger/swagger.yaml
@@ -25,6 +25,10 @@ paths:
       description: creates a contestant group
       operationId: createContestantGroup
       parameters:
+        - in: header
+          name: X-User-ID
+          required: true
+          type: string
         - in: body
           name: contestantGroupRequest
           description: a set of contestants with a title
@@ -48,6 +52,10 @@ paths:
           description: the id of the contestant group to update
           required: true
           type: string
+        - in: header
+          name: X-User-ID
+          required: true
+          type: string
         - in: body
           name: contestantGroupRequest
           description: a set of contestants with a title
@@ -63,6 +71,10 @@ paths:
       description: gets a contestant group
       operationId: getContestantGroup
       parameters:
+        - in: header
+          name: X-User-ID
+          required: true
+          type: string
         - in: path
           name: id
           description: the id of the contestant group to update
@@ -99,6 +111,10 @@ paths:
       # used as the method name of the controller
       operationId: createBracket
       parameters:
+        - in: header
+          name: X-User-ID
+          required: true
+          type: string
         - in: body
           name: bracketRequest
           description: definition of the bracket
@@ -135,6 +151,10 @@ paths:
       # used as the method name of the controller
       operationId: rerun
       parameters:
+        - in: header
+          name: X-User-ID
+          required: true
+          type: string
         - in: path
           name: id
           required: true
@@ -152,6 +172,10 @@ paths:
       # used as the method name of the controller
       operationId: currentRound
       parameters:
+        - in: header
+          name: X-User-ID
+          required: true
+          type: string
         - in: path
           name: id
           required: true
@@ -168,6 +192,10 @@ paths:
       # used as the method name of the controller
       operationId: getCompletedTournament
       parameters:
+        - in: header
+          name: X-User-ID
+          required: true
+          type: string
         - in: path
           name: id
           required: true
@@ -188,6 +216,10 @@ paths:
       # used as the method name of the controller
       operationId: close
       parameters:
+        - in: header
+          name: X-User-ID
+          required: true
+          type: string
         - in: path
           name: id
           required: true
@@ -203,6 +235,11 @@ paths:
       # used as the method name of the controller
       operationId: vote
       parameters:
+        - in: header
+          name: X-User-ID
+          required: true
+          type: string
+
         - in: path
           name: id
           required: true
